src/Imaging.h

extern void ImagingConvertYCbCr2RGB(UINT8* out, const UINT8* in, int pixels);