lib/src/ffi.dart


final ImagingConvertYCbCr2RGB = libImaging.lookupFunction<
  Void Function(Pointer<Uint8> c_out, Pointer<Uint8> c_in, Int32 pixels),
  void Function(Pointer<Uint8> c_out, Pointer<Uint8> c_in, int pixels)
>('ImagingConvertYCbCr2RGB');

final imageFromRGBA = libImaging.lookupFunction<
  Pointer<NativeType> Function(Int32 width, Int32 height, Pointer<Uint8> data),
  Pointer<NativeType> Function(int width, int height, Pointer<Uint8> data)
>('imageFromRGBA');

final imageMode = libImaging.lookupFunction<
  Pointer<Utf8> Function(Pointer<NativeType> im),
  Pointer<Utf8> Function(Pointer<NativeType> im)
>('imageMode');

final imageWidth = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im),
  int Function(Pointer<NativeType> im)
>('imageWidth');

final imageHeight = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im),
  int Function(Pointer<NativeType> im)
>('imageHeight');

final imageLinesize = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im),
  int Function(Pointer<NativeType> im)
>('imageLinesize');

final imageBlock = libImaging.lookupFunction<
  Pointer<Uint8> Function(Pointer<NativeType> im),
  Pointer<Uint8> Function(Pointer<NativeType> im)
>('imageBlock');

final blurHashForImage = libImaging.lookupFunction<
  Pointer<Utf8> Function(Pointer<NativeType> im, Int32 xComponents, Int32 yComponents),
  Pointer<Utf8> Function(Pointer<NativeType> im, int xComponents, int yComponents)
>('blurHashForImage');

final jpegEncode = libImaging.lookupFunction<
  Void Function(Pointer<NativeType> im, Int32 quality, Pointer<Pointer<Uint8>> data, Pointer<IntPtr> size),
  void Function(Pointer<NativeType> im, int quality, Pointer<Pointer<Uint8>> data, Pointer<IntPtr> size)
>('jpegEncode');
